fix(DateInput): prevent whitespace collapse in literals

--- a/packages/components/src/components/DateInput/components/DateInputSegment/DateInputSegment.module.css
+++ b/packages/components/src/components/DateInput/components/DateInputSegment/DateInputSegment.module.css
@@ -14,6 +14,10 @@
   color: var(--field-input-placeholder-color);
 }
 
+.literal {
+  white-space: pre;
+}
+
 .literal:not(.hasValue) {
   color: var(--field-input-placeholder-color);
 }
